# Tauri2_Any_WebApp_Wrapper

./: .gitignore  README.md  app.json  build.ps1  cargo_tree.ps1  check.ps1  package-lock.json  package.json  run.ps1
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs
